[tool.poetry]
name = "fastapi-gssapi"
version = "0.1.0"
description = "GSSAPI for FastAPI"
authors = ["Brandon Ewing <brandon.ewing@warningg.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "fastapi_gssapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
gssapi = "^1.8.2"
fastapi = "^0.100.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
k5test = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
