[project]
name = "fastapi-gssapi"
version = "0.1.1"
description = "GSSAPI for FastAPI"
authors = [{ name = "Brandon Ewing", email = "brandon.ewing@warningg.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "gssapi>=1.8.2,<2",
    "fastapi>=0.100.0",
]

[project.urls]
Homepage = "https://github.com/bewing/fastapi-gssapi"
Issues = "https://github.com/bewing/fastapi-gssapi/issues"

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "httpx>=0.24.1,<0.25",
    "k5test>=0.10.3,<0.11",
]

[tool.hatch.build.targets.sdist]
include = ["src/fastapi_gssapi"]

[tool.hatch.build.targets.wheel]
include = ["src/fastapi_gssapi"]

[tool.hatch.build.targets.wheel.sources]
"src/fastapi_gssapi" = "fastapi_gssapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
